--- a/home/dot_config/git/config
+++ b/home/dot_config/git/config
@@ -1,6 +1,11 @@
-[user]
-  name = {{ .git_name }}
-  email = {{ .git_email }}
+# ユーザー固有の設定は ~/.gitconfig.local に記載してください
+# ~/.gitconfig.local を以下の内容で作成してください:
+#   [user]
+#     name = Your Name
+#     email = your.email@example.com
+
+[include]
+    path = ~/.gitconfig.local
 
 [core]
   # 改行コードの自動変換を無効化する
