--- a/home/dot_codex/config.toml
+++ b/home/dot_codex/config.toml
@@ -4,6 +4,7 @@
 web_search = "live"
 
 # モデル設定
+model = "gpt-5.3-codex"
 model_reasoning_effort = "high"
 model_reasoning_summary = "auto"
 
@@ -24,3 +25,6 @@ network_access = true
 [features]
 unified_exec = true
 shell_snapshot = true
+
+[notice.model_migrations]
+"gpt-5.2-codex" = "gpt-5.3-codex"
