--- a/home/dot_tmux.conf
+++ b/home/dot_tmux.conf
@@ -13,10 +13,15 @@ set -g status-interval 5
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 
-# true color (24-bit color) サポートのみを有効化
-# extensive フラグは OSC シーケンス（色定義など）を出力するため、
-# 一部のターミナルエミュレータで問題が発生する可能性がある
-set -as terminal-features ',xterm-256color:RGB'
+# デフォルトターミナルを設定（tmux 内部で使用される TERM 値）
+set -g default-terminal "tmux-256color"
+
+# true color (24-bit color) サポートを有効化
+# terminal-overrides を使用して、ターミナルエミュレータの機能を適切に設定
+# RGB フラグで 24-bit カラーを有効化
+set -as terminal-overrides ',xterm*:RGB'
+set -as terminal-overrides ',screen*:RGB'
+set -as terminal-overrides ',tmux*:RGB'
 
 # クライアント側の PATH を tmux サーバに同期する
 # これにより、クライアントが tmux セッションにアタッチする際に最新の PATH が使用される
