fix: レビュー指摘対応 - screen-256color にフォールバック
tmux-256color の terminfo が存在しない環境では vim や less が
動作しない問題があるため、より広く互換性のある screen-256color
を使用するように変更。RGB フラグは terminal-overrides で
引き続き有効なため、24-bit カラーのサポートは維持される。

--- a/home/dot_tmux.conf
+++ b/home/dot_tmux.conf
@@ -14,7 +14,9 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # デフォルトターミナルを設定（tmux 内部で使用される TERM 値）
-set -g default-terminal "tmux-256color"
+# screen-256color を使用（広く互換性があり、ほぼ全ての環境で terminfo が存在する）
+# tmux-256color は一部環境で terminfo が存在せず、vim や less が動作しない問題があるため使用しない
+set -g default-terminal "screen-256color"
 
 # true color (24-bit color) サポートを有効化
 # terminal-overrides を使用して、ターミナルエミュレータの機能を適切に設定
