fix: tmux で terminal-features を削除し terminal-overrides のみ使用
terminal-features を使用すると tmux がターミナルエミュレータに
能力を問い合わせる際に、その応答（DA2 など）がシェルに漏れて
画面に表示されてしまう問題がある。

この問題を根本的に解決するため:
- terminal-features を完全に削除
- terminal-overrides で Tc フラグのみを設定
- default-terminal を screen-256color に明示的に設定

これにより、ターミナルへの問い合わせが発生せず、
エスケープシーケンスが画面に表示される問題を回避できる。

--- a/home/dot_tmux.conf
+++ b/home/dot_tmux.conf
@@ -13,10 +13,15 @@ set -g status-interval 5
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 
-# true color (24-bit color) サポートのみを有効化
-# extensive フラグは OSC シーケンス（色定義など）を出力するため、
-# 一部のターミナルエミュレータで問題が発生する可能性がある
-set -as terminal-features ',xterm-256color:RGB'
+# デフォルトターミナルを設定（tmux 内部で使用される TERM 値）
+# screen-256color を使用（広く互換性があり、ほぼ全ての環境で terminfo が存在する）
+set -g default-terminal "screen-256color"
+
+# true color (24-bit color) サポートを有効化
+# terminal-overrides を使用してターミナルエミュレータの機能を設定
+# terminal-features は使用しない（ターミナルへの問い合わせが発生し、エスケープシーケンスが漏れる可能性がある）
+set -ga terminal-overrides ",*256col*:Tc"
+set -ga terminal-overrides ",xterm*:Tc"
 
 # クライアント側の PATH を tmux サーバに同期する
 # これにより、クライアントが tmux セッションにアタッチする際に最新の PATH が使用される
