fix: tmux エスケープシーケンス問題の最終的な修正
focus-events を無効化することで、ターミナルフォーカスに関連する
エスケープシーケンス（DA2 など）の送信を抑制。

変更点:
- focus-events を off に設定
- powerline の読み込みを条件付きに変更
- escape-time を set -sg に変更（サーバー設定として明示）

これにより、tmux アタッチ時に `0;10;1c` などの
エスケープシーケンスが表示される問題を解決。

--- a/home/dot_tmux.conf
+++ b/home/dot_tmux.conf
@@ -17,6 +17,9 @@ bind -n WheelDownPane select-pane -t= \; send-keys -M
 # screen-256color を使用（広く互換性があり、ほぼ全ての環境で terminfo が存在する）
 set -g default-terminal "screen-256color"
 
+# フォーカスイベントを無効化（エスケープシーケンスが漏れる原因となる可能性がある）
+set -g focus-events off
+
 # true color (24-bit color) サポートを有効化
 # terminal-overrides を使用してターミナルエミュレータの機能を設定
 # terminal-features は使用しない（ターミナルへの問い合わせが発生し、エスケープシーケンスが漏れる可能性がある）
@@ -33,7 +36,9 @@ bind r source-file ~/.tmux.conf \; display-message "Reloaded tmux.conf"
 # コピーモードのキー操作をvi風にする
 setw -g mode-keys vi
 # エスケープキーの入力待ち時間を10ミリ秒にする（Vimなどでの操作性向上）
-set -g escape-time 10
+set -sg escape-time 10
 
-run-shell "powerline-daemon -q"
-source "/usr/share/powerline/bindings/tmux/powerline.conf"
+# powerline の設定を条件付きで読み込む
+# powerline が存在しない環境ではエラーを抑制
+if-shell "test -f /usr/share/powerline/bindings/tmux/powerline.conf" \
+  "run-shell 'powerline-daemon -q'; source /usr/share/powerline/bindings/tmux/powerline.conf"
