feat: session retentionの更新

--- a/home/dot_gemini/settings.json
+++ b/home/dot_gemini/settings.json
@@ -24,7 +24,9 @@
   "general": {
     "previewFeatures": true,
     "sessionRetention": {
-      "enabled": true
+      "enabled": true,
+      "maxAge": "30d",
+      "warningAcknowledged": true
     }
   },
   "ui": {
